--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body, html {
 .whatsapp-button {
   position: fixed;
   bottom: 25px;
-  right: 25px;
+  left: 25px;
   width: 60px;
   height: 60px;
   background-color: #25D366;
